--- a/.github/workflows/docusaurus-deploy.yml
+++ b/.github/workflows/docusaurus-deploy.yml
@@ -14,48 +14,46 @@ jobs:
   check_changes:
     runs-on: ubuntu-latest
     outputs:
-      should_run: ${{ steps.check.outputs.should_run }}
+      should_run: ${{ steps.check_changes.outputs.should_run }}
     steps:
-      - name: Check if gh-pages branch exists and has content
-        id: check
-        run: |
-          # Try to clone the gh-pages branch of the target repository
-          git clone --depth 1 --branch gh-pages https://x-access-token:${{ secrets.DOCS_DEPLOY_TOKEN }}@github.com/Basilakis/basilakis.github.io.git temp || FIRST_RUN=true
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2  # Fetch the current and previous commit
 
-          if [ "$FIRST_RUN" = true ]; then
-            # First run - gh-pages branch doesn't exist or is empty
+      - name: Check if gh-pages branch exists
+        id: check_gh_pages
+        continue-on-error: true
+        run: |
+          # Check if the target repository exists and has a gh-pages branch
+          curl -s -o /dev/null -w "%{http_code}" -H "Authorization: token ${{ secrets.DOCS_DEPLOY_TOKEN }}" https://api.github.com/repos/Basilakis/basilakis.github.io/branches/gh-pages | grep -q "200"
+          if [ $? -ne 0 ]; then
+            echo "First run detected - target repository or branch doesn't exist"
+            echo "should_run=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+      - name: Check for changes in readme folder
+        id: check_changes
+        run: |
+          if [ "${{ steps.check_gh_pages.outputs.should_run }}" == "true" ]; then
             echo "First run detected - will proceed with deployment"
             echo "should_run=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          # Get the list of changed files in the most recent commit
+          CHANGED_FILES=$(git diff --name-only HEAD^ HEAD)
+          echo "Changed files in the most recent commit:"
+          echo "$CHANGED_FILES"
+
+          # Check if any of the changed files are in the readme folder
+          if echo "$CHANGED_FILES" | grep -q "^readme/"; then
+            echo "Changes detected in readme folder - will proceed with deployment"
+            echo "should_run=true" >> $GITHUB_OUTPUT
           else
-            # Check if there are any changes in the readme directory
-            echo "Checking for changes in readme files..."
-
-            # Checkout the repository to check for changes
-            git clone --depth 1 https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/Basilakis/kai.git kai-repo
-            cd kai-repo
-
-            # Get the last commit that modified the readme directory
-            LAST_COMMIT=$(git log -1 --format="%H" -- readme/)
-
-            # Get the last deployment commit from the gh-pages branch
-            cd ../temp
-            LAST_DEPLOYMENT=$(grep -o "Deploying to gh-pages from @ Basilakis/kai@[0-9a-f]*" -r . | head -1 | grep -o "[0-9a-f]*$" || echo "")
-
-            cd ..
-
-            if [ -z "$LAST_DEPLOYMENT" ] || [ "$LAST_COMMIT" != "$LAST_DEPLOYMENT" ]; then
-              # Either there's no previous deployment or the readme files have changed
-              echo "Changes detected - will proceed with deployment"
-              echo "should_run=true" >> $GITHUB_OUTPUT
-            else
-              # No changes detected
-              echo "No changes detected - skipping deployment"
-              echo "should_run=false" >> $GITHUB_OUTPUT
-            fi
-
-            # Clean up
-            rm -rf temp
-            rm -rf kai-repo
+            echo "No changes detected in readme folder - skipping deployment"
+            echo "should_run=false" >> $GITHUB_OUTPUT
           fi
 
   deploy:
